# Ingegneria-del-software

./: .gitignore  CMakeLists.txt  README.md  appunti.txt
Client/: CMakeLists.txt
Client/src/: lib.hpp  main.cpp  main.hpp
Client/src/controller/: GameManager.cpp  GameManager.hpp  GamemodeController.cpp  GamemodeController.hpp  GameplayController.cpp  GameplayController.hpp  HomeController.cpp  HomeController.hpp  JsonManager.cpp  JsonManager.hpp  LoginController.cpp  LoginController.hpp  ProfileController.cpp  ProfileController.hpp  RedisManager.cpp  RedisManager.hpp  SettingsController.cpp  SettingsController.hpp  StockfishManager.cpp  StockfishManager.hpp  ViewGameController.cpp  ViewGameController.hpp
Client/src/model/: GameOptions.cpp  GameOptions.hpp  User.cpp  User.hpp
Client/src/view/: ChessboardView.cpp  ChessboardView.hpp  GameGraphicOptions.cpp  GameGraphicOptions.hpp  GameMode.cpp  GameMode.hpp  GameplayFrame.cpp  GameplayFrame.hpp  HomePage.cpp  HomePage.hpp  ImageFuncions.cpp  ImageFuncions.hpp  LoginPanel.cpp  LoginPanel.hpp  ProfilePanel.cpp  ProfilePanel.hpp  SettingsPanel.cpp  SettingsPanel.hpp  ViewGamePanel.cpp  ViewGamePanel.hpp
Server/: CMakeLists.txt  Database.cpp  Database.hpp  RedisManager.cpp  Server.cpp  Server.hpp  api.txt  appunti operazioni  server.cpp
Server/src/: Database.cpp  Database.hpp  RedisManager.cpp  RedisManager.hpp  Server.cpp  Server.hpp  Test.cpp  Test.hpp
client-old/src/: Settings.cpp  lib.hpp  main.cpp  redis.cpp
client-old/src/controller/: GamemodeController.cpp  GamemodeController.hpp  GameplayController.cpp  ProfileController.cpp  StockfishManager.cpp
client-old/src/model/: GameOptions.cpp
client-old/src/view/: ChessboardView.hpp  GameGraphicOptions.cpp  GameGraphicOptions.hpp  GameMode.cpp  GameplayFrame.hpp  HomePage.cpp  LoginPanel.hpp  ProfilePanel.cpp  SettingsPanel.hpp
client/src/: Makefile  Settings.hpp  lib.h  main.cpp  main.h
client/src/controller/: GameManager.cpp  GameManager.h  GameManager.hpp  GamemodeController.cpp  GamemodeController.h  GameplayController.cpp  GameplayController.h  GameplayController.hpp  HomeController.cpp  HomeController.h  PanelSwitchManager.h  ProfileController.cpp  ProfileController.h  RedisManager.cpp  RedisManager.h  SettingsController.cpp  SettingsController.h  SettingsController.hpp  StockfishManager.cpp  StockfishManager.h  controller.h
client/src/model/: GameOptions.cpp  GameOptions.h  SettingsConfiguration.cpp  SettingsConfiguration.h  User.cpp  User.h
client/src/model/chess_pachage/: chess.hpp  components.h
client/src/view/: ChessboardView.cpp  ChessboardView.h  GameGraphicOptions.cpp  GameGraphicOptions.h  GameMode.cpp  GameMode.h  GameplayFrame.cpp  GameplayFrame.h  HomePage.cpp  HomePage.h  ImageFuncions.cpp  ImageFuncions.h  LoginPanel.cpp  LoginPanel.h  MatchmakingPanel.cpp  MatchmakingPanel.h  ProfilePanel.cpp  ProfilePanel.h  SettingsPanel.cpp  SettingsPanel.h
model/chess_pachage/: components.h
server-old/src/: Makefile  server.cpp
server/src/: Database.h  Makefile  client.cpp  server.cpp
